tests/e2e/foreach_output_required.error
Error: syntax error in story at line 2, column 9

2|    foreach items
              ^^^^^

E0064: Foreach blocks require an output (e.g. `as item`)
