tests/e2e/foreach_output_required.story
items = [1]
foreach items
	x = item
